docs(decisions): resolve DA-0001 OPAQUE adoption

--- a/docs/decisions/DA-0001.md
+++ b/docs/decisions/DA-0001.md
@@ -137,11 +137,53 @@ The zp specification §4.3 mandates SPAKE2+ (RFC 9383) for Known Mode handshake,
 
 ## DA Decision
 
-*Awaiting DA response*
+**RESOLVED: 2025-12-20**
+**Status:** APPROVED - Option 2 (Change spec to OPAQUE)
+**Category:** B (Spec Gap - implementation ecosystem constraint)
+
+### Finding
+
+The DA correctly identified that:
+1. Spec §4.3 mandates SPAKE2+ (RFC 9383)
+2. No audited Rust SPAKE2+ implementation exists
+3. The `spake2` crate implements RFC 9382 (SPAKE2), not RFC 9383 (SPAKE2+)
+
+### Security Analysis
+
+OPAQUE provides **strictly stronger** security properties than SPAKE2+:
+- Server never learns password (only OPRF output)
+- Same offline attack resistance and forward secrecy
+- Mutual authentication preserved
+- NCC Group audited (2021), production-tested by Meta/WhatsApp
+
+### Decision
+
+**APPROVED: Option 2 with conditions:**
+
+1. **Cipher Suite Abstraction**: Define `ZP_PAKE_SUITE` parameter with OPAQUE as mandatory-to-implement default
+2. **Frame Format Preservation**: Retain `KnownHello`, `KnownResponse`, `KnownFinish` frame names but update contents for OPAQUE flow
+3. **Test Vector Replacement**: Replace TEST_VECTORS.md §9.2 with OPAQUE-based vectors
+4. **Spec Version**: Mark as v1.1 candidate (significant change, not errata)
+
+### Rationale
+
+1. Security First: Using unaudited crypto is unacceptable
+2. Equivalent Security: OPAQUE provides same/stronger properties
+3. Pragmatic Path: opaque-ke is audited, maintained, production-ready
+4. Ecosystem Reality: No timeline for audited SPAKE2+ implementation
+
+### Spec Impact (v1.1)
+
+- §4.3 rewrite (OPAQUE protocol flow)
+- §4.3.4 Key Derivation update
+- Appendix A: Add `ZP_PAKE_SUITE` parameter
+- TEST_VECTORS.md §9.2 replacement
 
 ---
 
-**Next Steps (pending DA decision):**
-- If Option 2 approved: Rewrite §4.3, implement OPAQUE, update TEST_VECTORS.md
-- If Option 3 approved: Mark Task 4.1 as deferred, proceed to Task 4.3
-- If other option approved: Follow DA guidance
+**Implementation Next Steps:**
+1. ✅ Move DA-0001.md to docs/decisions/ (resolved)
+2. Begin §4.3 rewrite draft (can parallel with implementation)
+3. Implement OPAQUE integration using opaque-ke v3.0+
+4. Generate new test vectors from opaque-ke conformance suite
+5. Update NEXT_TASKS.md to reflect OPAQUE-based Task 4.1
